Obtendo as notas de um produto.
