# loja-virtual/src/main/java/com/marceltessarini/lojavirtual/rs/controller/ranking/RankingApiService.java
@@ -2,6 +2,7 @@ package com.marceltessarini.lojavirtual.rs.controller.ranking;
 
 import org.springframework.http.ResponseEntity;
 
+import com.marceltessarini.lojavirtual.rs.model.Nota;
 import com.marceltessarini.lojavirtual.rs.model.Ranking;
 import com.marceltessarini.lojavirtual.rs.model.Rankings;
 
@@ -12,5 +13,7 @@ public interface RankingApiService {
 	ResponseEntity<Void> salvar(Ranking ranking);
 
 	ResponseEntity<Ranking> getRanking(Long idRanking);
+
+	ResponseEntity<Nota> getNotasDoProduto(Long idProduto);
 
 }
